fix the layout shift problem for once

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,3 +12,7 @@ input[type="number"] {
   -moz-appearance: textfield;
   appearance: textfield;
 }
+
+.text-transparent {
+  color: transparent !important;
+}
